envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 8888 }
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          config:
            codec_type: auto
            stat_prefix: ingress_http
            route_config:
              name: local_route
              virtual_hosts:
              - name: local_service
                domains: ["*"]
                cors:
                  allow_origin_string_match:
                  - prefix: "*"
                  allow_credentials: true
                  allow_methods: GET, PUT, DELETE, POST, PATCH, OPTIONS
                  allow_headers: content-type,origin,authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web
                  expose_headers: grpc-status,grpc-message,x-envoy-upstream-service-time
                routes:
                - match:
                    prefix: /
                  route:
                    timeout: 0s
                    cluster: campsite-apiserver
            http_filters:
            - name: envoy.grpc_web
            - name: envoy.cors
            - name: envoy.router

  clusters:
    - name: campsite-apiserver
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      hosts: [{ socket_address: { address: 127.0.0.1, port_value: 9999 }}]
